--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
             <version>2.11.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>21</version>
+        </dependency>
+
     </dependencies>
 
 </project>
